[metadata]
name = pyarn
version = 0.1.0.dev1
description = Yarn JS package manager lockfile parser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/containerbuildsystem/pyarn
license = GPLv3+
license_files = LICENSE
platform = any
author = Red Hat, Inc.
author_email = athos@redhat.com
keywords =
  Yarn
  JavaScript
  lockfile
classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.6
install_requires =
  ply

[flake8]
max-line-length = 100
doctests = True
exclude = pyarn/parsetab.py
